added item menu to actionBar with icone, class AndroidVersionAdapter.java and filled the ArrayAdapter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Menus_android</string>
+    <string name="modify_list_item_title">Modifier la liste</string>
+    <string name="AddItemTitle">Ajouter</string>
+    <string name="erase_item_title">Effacer la liste</string>
 </resources>
